tests/scan/fixtures/validation/negative/clean_npm_lockfile_consistent/index.js
const _ = require('lodash');

module.exports = { greeting: _.kebabCase('Hello World') };
